Updated gradle test config